[package]
name = "hooman"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.5.0"
bytes       = "*"
carrier     = "0.10"
log         = "0.4.6"
env_logger  = {version = "0.6.2", default-features = false, features = ["termcolor", "atty", "humantime"]}


# device
linux-embedded-hal  = "0.2"
pwm-pca9685         = "0.1"


# cli
stick   = "0.7"



[[bin]]
name = "carrier"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[build-dependencies]
prost-build = "0.5.0"
